Fix some dialog styling

--- a/src/components/Popover.astro
+++ b/src/components/Popover.astro
@@ -22,7 +22,7 @@ const { class: className, ...props } = Astro.props;
 	role="dialog"
 	aria-modal="true"
 	aria-label="Popover"
-	popover
+	closedby="any"
 	{...props}
 >
 	<slot />
