--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -262,35 +262,34 @@
 		background-color: var(--color-ui-3);
 	}
 
-	/* Popover styling */
-	[popover]:popover-open {
-		@apply opacity-100 scale-100;
-	}
-	[popover] {
-		@apply text-tx bg-bg opacity-0 scale-0;
+	/* Dialog styling */
+	dialog:open {
+		@apply text-tx bg-bg opacity-100 scale-100;
 		transition:
 			opacity 0.1s,
 			transform 0.1s,
 			overlay 0.1s allow-discrete,
 			display 0.1s allow-discrete;
 	}
-
-	[popover]::backdrop {
-		@apply bg-bg/0 backdrop-blur-none;
+	body:has(dialog:open) {
+		/* Keep the scrollbar visible, but disable scrolling */
+		position: fixed;
+		overflow-y: scroll;
+		width: 100%;
+	}
+	::backdrop {
+		@apply bg-bg/50 backdrop-blur-sm;
 		transition:
 			display 0.1s allow-discrete,
 			overlay 0.1s allow-discrete,
 			background-color 0.1s,
 			backdrop-filter 0.1s;
 	}
-	[popover]:popover-open::backdrop {
-		@apply bg-bg/50 backdrop-blur-sm;
-	}
 	@starting-style {
-		[popover]:popover-open {
+		dialog {
 			@apply opacity-0 scale-0;
 		}
-		[popover]:popover-open::backdrop {
+		::backdrop {
 			@apply bg-bg/0 backdrop-blur-none;
 		}
 	}
