--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -1,10 +1,10 @@
 ---
 import { base } from "astro:config/client";
 import type Parser from "rss-parser";
+import Dialog from "./Dialog.astro";
 import ArchiveIcon from "./icons/ArchiveIcon.astro";
 import LinkIcon from "./icons/LinkIcon.astro";
 import SquareTopDownIcon from "./icons/SquareTopDownIcon.astro";
-import Popover from "./Popover.astro";
 
 interface Props {
 	item: Parser.Item;
@@ -167,7 +167,7 @@ const linkAttrs = {
 		{
 			shouldUsePopover && (
 				<>
-					<Popover id={popoverId} class="space-y-4">
+					<Dialog id={popoverId} class="space-y-4">
 						<hgroup>
 							<h3 class="text-base font-semibold leading-tight mb-2">
 								<a href={item.link} rel="noopener noreferrer" target="_blank">
@@ -197,7 +197,7 @@ const linkAttrs = {
 							</p>
 						</hgroup>
 						<article class="prose" set:html={item.content} />
-					</Popover>
+					</Dialog>
 				</>
 			)
 		}
