Always round the news icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,7 +117,9 @@ items = items
 			class="border-1 border-ui-3 md:rounded-xl p-4 flex flex-col sm:flex-row gap-3 items-start sm:items-center justify-between"
 		>
 			<div class="flex items-center gap-2.5 flex-3">
-				<div class="p-1.5 bg-gradient-to-br from-bl to-pu border border-ui-3">
+				<div
+					class="p-1.5 bg-gradient-to-br from-bl rounded-lg to-pu border border-ui-3"
+				>
 					<NewsIcon class="w-5 h-5 text-white" />
 				</div>
 				<hgroup>
