Switch back to popover api

--- a/src/components/Dialog.astro
+++ b/src/components/Dialog.astro
@@ -20,6 +20,7 @@ const { class: className, ...props } = Astro.props;
 		className,
 	]}
 	role="dialog"
+	popover="auto"
 	aria-modal="true"
 	aria-label="Popover"
 	closedby="any"
