--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -70,7 +70,7 @@ const linkAttrs = {
 				{
 					hasFavicon ? (
 						<div class="relative">
-							<div class="absolute inset-0 bg-gradient-to-br from-bl/20 to-pu/20 md:rounded blur-sm" />
+							<div class="absolute inset-0 bg-gradient-to-br from-bl/20 to-pu/20 rounded blur-sm" />
 							<img
 								src={faviconPath}
 								alt={`Favicon for ${item.link}`}
@@ -127,7 +127,7 @@ const linkAttrs = {
 				</linkAttrs.el>
 			</div>
 
-			<div class="flex flex-col md:flex-row items-start gap-1">
+			<div class="flex flex-col items-start gap-1">
 				<a
 					href={item.link}
 					rel="noopener noreferrer"
