Use Icon component

--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -74,7 +74,7 @@ const linkAttrs = {
 							<img
 								src={faviconPath}
 								alt={`Favicon for ${item.link}`}
-								class="relative w-4 h-4 transition-all duration-300 grayscale dark:invert group-hover:grayscale-0 group-hover:invert-0 md:rounded-sm"
+								class="relative h-4 w-4 transition-all duration-300 grayscale dark:invert group-hover:grayscale-0 group-hover:invert-0 md:rounded-sm"
 								loading="lazy"
 							/>
 						</div>
