--- a/src/components/icons/ArchiveIcon.astro
+++ b/src/components/icons/ArchiveIcon.astro
@@ -1,13 +1,10 @@
 ---
+import Icon from "./Icon.astro";
+
 const props = Astro.props;
 ---
 
-<svg
-	xmlns="http://www.w3.org/2000/svg"
-	width="1em"
-	height="1em"
-	viewBox="0 0 24 24"
-	{...props}
+<Icon {...props} aria-label="Archive Icon">
 	><!-- Icon from Solar by 480 Design - https://creativecommons.org/licenses/by/4.0/ -->
 	<g fill="none" stroke="currentColor" stroke-width="1.5"
 		><path
@@ -16,5 +13,5 @@ const props = Astro.props;
 			stroke-linecap="round"
 			d="M20.5 7v6c0 3.771 0 5.657-1.172 6.828S16.271 21 12.5 21h-1m-8-14v6c0 3.771 0 5.657 1.172 6.828c.704.705 1.668.986 3.144 1.098M12 3H4c-.943 0-1.414 0-1.707.293S2 4.057 2 5s0 1.414.293 1.707S3.057 7 4 7h16c.943 0 1.414 0 1.707-.293S22 5.943 22 5s0-1.414-.293-1.707S20.943 3 20 3h-4"
 		></path></g
-	></svg
+	></Icon
 >
