--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import NewsIcon from "../components/icons/NewsIcon.astro";
 import { fetchFeedData } from "../lib/feedData";
 
 const RECENT_FEED_CUTOFF_TIME = import.meta.env.RECENT_FEED_CUTOFF_TIME
-	? Number.parseInt(import.meta.env.RECENT_FEED_CUTOFF_TIME)
+	? Number.parseInt(import.meta.env.RECENT_FEED_CUTOFF_TIME, 10)
 	: 6 * 60 * 60 * 1000;
 
 const basePath = import.meta.env.BASE_URL satisfies string | undefined;
